git commit -m "to-do-app-two"

--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
   <head>
     <meta name="viewport" content="width=device-width,  initial-scale=1">
     <title>To-Do-App</title>
+    <!--Custom Styles -->
+    <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
-    <h1>To-Do-App</h1>
+    <header>
+    <h1>Things to do Today!</h1>
 
     <form id="addToDoForm">
-      <label for="newToDoText">New To-Do:</label>
+      <label for="newToDoText">New To Do:</label>
       <input type="text" id="newToDoText">
-      <button type="submit">Add To-Do</button>
+      <button type="submit">Add</button>
     </form>
 
     <ul id="toDoList">
 
     </ul>
-
+</header>
    <script src="app.js"></script>
   </body>
   </html>
